--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
     <button class="nextButton">Next word</button>
 </div>
 
+<div class="autoProgressContainer">
+    <button class="autoProgressButton">Auto-progress</button>
+    <input type="range" min="500" max="3000" value="1500" class="slider" id="progressSpeed" style="display: none;">
+</div>
 
 <script src="app.js"></script>
 
