--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
         </div>
 
 <div class="pinyinButton">
-    <button class="pinyinbutton">Show pinyin</button>
+    <button class="pinyinbutton"></button>
 </div>
 
 <div class="definitionButton">
-    <button class="definitionButton">Show definition</button>
+    <button class="definitionButton"></button>
 </div>
 
 <div class="nextButton">
-    <button class="nextButton">Next word</button>
+    <button class="nextButton"></button>
 </div>
 
 <div class="autoProgressContainer">
