--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Vocabulary Review</title>
+        <link rel="icon" href="/icons/CheckIcon.png">
         <link href="style.css" rel="stylesheet" type="text/css">
     </head>
 
@@ -13,6 +14,7 @@
  
         <div class="dropdown">
             <select name="vocab" onChange="getVocab()">
+                <option value="Custom" selected>Custom</option>
                 <option value="HSK1">HSK1</option>
                 <option value="HSK2">HSK2</option>
                 <option value="HSK3">HSK3</option>
@@ -20,7 +22,6 @@
                 <option value="HSK5">HSK5</option>
                 <option value="HSK6">HSK6</option>
                 <option value="HSK789">HSK7-9</option>
-                <option value="Custom" selected>Custom</option>
             </select>
         </div>
 
